--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "axios": "^0.19.2",
+    "csv-parse": "^4.8.8",
     "d3-dsv": "^1.2.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
