--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "csv-parse": "^4.8.8",
     "d3-dsv": "^1.2.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
     "recharts": "^1.8.5",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "victory": "^34.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@types/chart.js": "^2.9.16",
     "@types/recharts": "^1.8.9",
     "autoprefixer": "^9.7.4",
     "postcss-cli": "^7.1.0",
